# skyeng

./: alembic.ini  example.env  pyproject.toml  requirements.txt
app/config/: base.py
app/db/postgresql/: base.py  crud.py
app/db/postgresql/migrations/: env.py
app/db/postgresql/migrations/versions/: f0f6cfe148c7_init_migr.py
app/entrypoints/: __main__.py
app/modules/files/crud/: base.py  models.py
app/modules/files/service/: schemas.py
app/modules/users/crud/: base.py  models.py
app/modules/users/routes/: endpoints.py
app/modules/users/services/: base.py  dependencies.py  schemas.py
app/types/: files.py
app/utils/: schemas.py
